# Benelib

./: CMakeLists.txt  Makefile  PKGBUILD  Readme.md
include/: algorithm.h  bene.h  bene_algorithm.h  bene_bitfield.h  bene_const.h  bene_file.h  bene_log.h  bene_meta.h  bene_quickRoot.h  bene_randomRoot.h  bene_singleton.h
lib/: algorithm.cpp  file.cpp  quickRoot.cpp
src/: test.cpp
